<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:alphabeticShortcut="n"
        android:icon="@drawable/ic_action_note_add"
        android:title="@string/add_profile"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_scan_qr_code"
                android:title="@string/add_profile_methods_scan_qr_code"/>
            <item
                android:id="@+id/action_import_clipboard"
                android:alphabeticShortcut="v"
                android:title="@string/action_import"/>
            <item
                android:id="@+id/action_import_file"
                android:alphabeticShortcut="o"
                android:title="@string/action_import_file"/>
            <item
                android:id="@+id/action_manual_settings"
                android:title="@string/add_profile_methods_manual_settings"
                android:alphabeticShortcut="n"
                app:alphabeticModifiers="CTRL|SHIFT" />
            <!-- SSD -->
            <item
                android:id="@+id/action_add_subscription"
                android:alphabeticShortcut="a"
                android:numericShortcut="5"
                android:title="@string/add_subscription"/>
            <item
                android:id="@+id/action_update_subscription"
                android:alphabeticShortcut="u"
                android:numericShortcut="6"
                android:title="@string/update_subscription"/>
            <!-- DSS -->
        </menu>
    </item>
    <item
        android:alphabeticShortcut="s"
        android:icon="@drawable/ic_file_file_upload"
        android:title="@string/action_export_more"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_export_clipboard"
                android:alphabeticShortcut="c"
                android:title="@string/action_export"/>
            <item
                android:id="@+id/action_export_file"
                android:title="@string/action_export_file"
                android:alphabeticShortcut="s"
                app:alphabeticModifiers="CTRL|SHIFT" />
        </menu>
    </item>
    <!-- SSD -->
    <item
        android:id="@+id/action_tcping_latency"
        android:alphabeticShortcut="t"
        android:icon="@drawable/ic_action_offline_bolt"
        android:numericShortcut="2"
        android:title="@string/tcping_latency"
        app:showAsAction="always">
    </item>
    <!-- DSS -->
</menu>
